# $Id$

Griffith ChangeLog
------------------
(c) 2005-2006 Vasco Nunes, Piotr Ożarowski

2006-12-20 Piotr Ożarowski <ozarow@gmail.com>
	* Version changed to 0.9~rc1 (0.7 and 0.8 are skipped because of lots of changes in this release)
	* Merge function and MySQL/PostgreSQL backup disabled for now

2006-12-18 Piotr Ożarowski <ozarow@gmail.com>
	* Detect old DB (and convert it) in restore function
	* UI changes (rest of windows converted to dialogs, minor changes)

2006-12-18 Jessica K. Parth <Jessica.K.P@women-at-work.org>
	* tooltips to mange people dialog added
	* german translation updated (100% finished)

2006-12-17 Jessica K. Parth <Jessica.K.P@women-at-work.org>
	* Import CSV plugin updated to work with multiple files

2006-12-17 Piotr Ożarowski <ozarow@gmail.com>
	* AniDB, Filmweb, Stopklatka and TanukiAnime movie plugins updated
	* Upgrade from old database: detect SQLite3 and print some hints
	* Add "commentary" to the language types

2006-12-16 Piotr Ożarowski <ozarow@gmail.com>
	* WP, FDb and Onet movie plugins updated
	* movie plugins:
	  + allow "%s" in self.original_url_search and self.translated_url_search
	  + opening new page inside movie plugin is now as easy as: "self.new_page =  self.open_page(url='http://something')"
	* chardet added to optional dependencies
	* Import multiple files at once

2006-12-16 Jessica K. Parth <Jessica.K.P@women-at-work.org>
	* added a warning when there are no movies in the database to ( print cover, fetch poster, change poster, edit movie, delete movie, clone movie )
	* Import CSV Plugin updated (use chardet "http://chardet.feedparser.org/" to detect file format)

2006-12-15 Piotr Ożarowski <ozarow@gmail.com>
	* Added "N/A" to some fields in "technical information" tab (NULL in database)
	* Added some relations between windows
	* "Suggest unseen movie" now chooses movie from main list only (f.e. from specified collection)

2006-12-15 Jessica K. Parth <Jessica.K.P@women-at-work.org>