@@ -20,4 +20,4 @@ Description: film collection manager
  title and selecting a supported source. Griffith will then try to fetch all
  the related information from the Web.
  .
-  Homepage: http://griffith.vasconunes.net/
+  Homepage: http://griffith.berlios.de/
