@@ -1,7 +1,7 @@
 This package was debianized by Piotr Ozarowski <ozarow@gmail.com> on
 Fri, 24 Jun 2005 15:51:42 +0200.
 
-It was downloaded from http://griffith.vasconunes.net/
+It was downloaded from http://griffith.berlios.de/
 
 Copyright Holder: Vasco Nunes <vasco.m.nunes@gmail.com>, Piotr Ożarowski <ozarow@gmail.com>
 
