@@ -32,7 +32,7 @@ all translators had time to update their files.
   + Fixed problem with posters conversion on Windows
   + New green style in exported HTML tables
 * Configurable main list's default sorting criteria
-* Lots of bugs fixed (some new added ;)
+* Lots of bugs fixed (some new added ;-)
 
 
 Griffith 0.6.2
